# copc-lib

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .release-it.json  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE.md  MANIFEST.in  NAMING.md  README.md  pyproject.toml  setup.py
.github/workflows/: build_conda.yml  cmake.yml  generate-release-notes.sh  pip.yaml  release.yml  run_tests.yml
.github/workflows/conda/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_test.bat  run_test.sh
cmake/: BuildRequires.cmake  DownloadExampleFiles.cmake  copc-lib-config.cmake  helpers.cmake
cpp/: CMakeLists.txt
cpp/include/copc-lib/: utils.hpp
cpp/include/copc-lib/copc/: config.hpp  copc_config.hpp  extents.hpp  file.hpp  info.hpp
cpp/include/copc-lib/geometry/: box.hpp  helpers.hpp  vector3.hpp
cpp/include/copc-lib/hierarchy/: entry.hpp  key.hpp  node.hpp  page.hpp
cpp/include/copc-lib/hierarchy/internal/: hierarchy.hpp  page.hpp
cpp/include/copc-lib/io/: base_io.hpp  base_reader.hpp  copc_base_io.hpp  copc_config.hpp  copc_reader.hpp  copc_writer.hpp  laz_base_writer.hpp  laz_reader.hpp  laz_writer.h  laz_writer.hpp  reader.hpp  writer.hpp
cpp/include/copc-lib/io/internal/: copc_writer_internal.hpp  writer_internal.hpp
cpp/include/copc-lib/las/: config.hpp  file.hpp  header.hpp  laz_config.hpp  point.hpp  points.hpp  utils.hpp  vlr.hpp
cpp/include/copc-lib/laz/: compressor.hpp  decompressor.hpp
cpp/src/copc/: config.cpp  copc_config.cpp  extents.cpp  info.cpp
cpp/src/geometry/: box.cpp  helpers.cpp
cpp/src/hierarchy/: key.cpp  page.cpp
cpp/src/io/: base_io.cpp  base_reader.cpp  copc_base_io.cpp  copc_config.cpp  copc_reader.cpp  copc_writer_internal.cpp  copc_writer_public.cpp  laz_base_writer.cpp  laz_reader.cpp  laz_writer.cpp  reader.cpp  writer_internal.cpp  writer_public.cpp
cpp/src/las/: header.cpp  laz_config.cpp  point.cpp  points.cpp  utils.cpp  vlr.cpp
example/: CMakeLists.txt  example-laz-writer.cpp  example-lib.cpp  example-reader.cpp  example-reader.py  example-writer.cpp  example-writer.py  example_laz_writer.py  example_mp.py  example_reader.py  example_writer.py
include/: copc_lib.hpp  hierarchy.hpp  reader.hpp  structs.hpp  types.hpp
include/copc/: copc.hpp  file.hpp
include/copc-lib/: utils.hpp
include/copc-lib/copc/: copc.hpp  extents.hpp  file.hpp  stats.hpp
include/copc-lib/geometry/: box.hpp  vector3.hpp
include/copc-lib/hierarchy/: box.hpp  entry.hpp  hierarchy.hpp  key.hpp  node.hpp  page.hpp  vector3.hpp
include/copc-lib/hierarchy/internal/: hierarchy.hpp  page.hpp
include/copc-lib/io/: base_io.hpp  reader.hpp  writer.hpp
include/copc-lib/io/internal/: writer_internal.hpp
include/copc-lib/las/: file.hpp  header.hpp  point.hpp  point2.hpp  points.hpp  utils.hpp  vlr.hpp
include/copc-lib/las/internal/: gps_time.hpp  nir.hpp  point_10.hpp  point_14.hpp  rgb.hpp  utils.hpp
include/copc-lib/laz/: compressor.hpp  decompressor.hpp
include/hierarchy/: entry.hpp  hierarchy.hpp  node.hpp  page.hpp
include/io/: reader.hpp
include/las/: file.hpp  point.hpp
include/las/internal/: extra_bytes.hpp  utils.hpp
include/laz/: decompressor.hpp
libs/: .gitignore
libs/catch2/: catch.hpp
python/: CMakeLists.txt  bindings.cpp
python/copclib/mp/: read.py  transform.py
src/: copc_lib.cpp  hierarchy.cpp  reader.cpp
src/copc/: copc.cpp  extents.cpp  file.cpp  stats.cpp
src/geometry/: box.cpp
src/hierarchy/: box.cpp  hierarchy.cpp  key.cpp  node.cpp  page.cpp
src/io/: base_io.cpp  reader.cpp  writer.cpp  writer_internal.cpp  writer_public.cpp
src/las/: file.cpp  header.cpp  point.cpp  point2.cpp  points.cpp  utils.cpp  vlr.cpp
src/las/internal/: point_10.cpp  point_14.cpp
test/: CMakeLists.txt  api_test.cpp  box_test.cpp  box_test.py  config_test.cpp  copc_config_test.cpp  extents_test.cpp  extents_test.py  hierarchy_test.cpp  key_test.cpp  key_test.py  las_header_test.cpp  las_header_test.py  laz_config_test.cpp  laz_reader_test.cpp  laz_reader_test.py  laz_writer_test.cpp  laz_writer_test.py  mp_read_test.py  mp_transform_test.py  pickle_test.py  point_test.cpp  point_test.py  points_test.cpp  points_test.py  reader_node_test.cpp  reader_test.cpp  reader_test.py  stats_test.cpp  stats_test.py  test_data.h  test_examples.py  utils.py  vector3_test.cpp  vector3_test.py  writer_node_test.cpp  writer_test.cpp  writer_test.py
test/data/: .gitignore  create_test_data.py  create_test_data.sh  test_data.h
test/data/las/: first_20_pts.las  first_20_pts.laz  last_60_pts.las  last_60_pts.laz  next_12_pts.las  next_12_pts.laz
